--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite -m=dev",
-    "build": "node build/build-all",
-    "build:app": "vite build -m=app",
-    "build:lib": "node build/build-single-lib",
+    "build": "node build/build-all.js",
+    "build:lib": "node build/build-single-lib.js",
     "init:pub": "node ./build/init-package-info.js EXEC",
     "init:dev": "node ./build/init-package-info.js dev EXEC",
     "publish": "node ./build/publish.js EXEC",
@@ -18,14 +17,10 @@
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^6.15.0",
     "@vitejs/plugin-legacy": "^4.1.1",
-    "@vitejs/plugin-vue": "4.5.2",
-    "@vue/compiler-sfc": "^3.2.22",
-    "@vue/eslint-config-typescript": "^9.1.0",
     "chalk": "^5.3.0",
     "dts-bundle-generator": "^9.0.0",
     "eslint": "^8.52.0",
     "npm-run-all": "^4.1.5",
-    "eslint-plugin-vue": "^8.0.3",
     "execa": "^6.1.0",
     "lerna": "^8.0.0",
     "less": "^4.2.0",
@@ -35,7 +30,6 @@
     "typescript-eslint": "0.0.1-alpha.0",
     "up-fs": "^0.0.1",
     "vite": "^5.0.6",
-    "vue-lim-compiler": "workspace:*",
-    "vue-lim-util": "workspace:*"
+    "vue-lim": "workspace:*"
   }
 }
