--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vue-lim",
+    "name": "rollup-plugin-vue-lim",
     "version": "0.0.0",
     "main": "src/index.ts",
     "module": "src/index.ts",
@@ -15,17 +15,12 @@
         "dist"
     ],
     "dependencies": {
-        "@babel/generator": "^7.24.7",
-        "@babel/parser": "^7.24.7",
-        "@babel/traverse": "^7.24.7",
-        "@babel/types": "^7.24.7",
-        "@types/babel__traverse": "^7.20.6",
-        "htmlparser2": "^9.1.0"
+        "vue-lim": "workspace:*"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "publishConfig": {
         "registry": "https://registry.npmjs.org/"
-    },
-    "devDependencies": {
-        "@types/babel__generator": "^7.6.8"
     }
 }
