--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "removeComments": false,
     "jsx": "preserve",
     "lib": ["esnext", "dom"],
-    "types": ["./build/env.d.ts"],
+    "types": ["./build/env.d.ts", "node"],
     "rootDir": ".",
     "noEmit": false,
     "paths": {
